2013-08-13  Ryosuke Niwa  <rniwa@webkit.org>

        Another Windows build fix attempt after r153978.

        * page/win/DragControllerWin.cpp:

2013-08-12  Ryosuke Niwa  <rniwa@webkit.org>

        Windows build fix attempt after r153978.

        * page/win/DragControllerWin.cpp:

2013-08-12  Zan Dobersek  <zdobersek@igalia.com>

        ASSERTION FAILED: type() == Percent in WebCore::Length::percent
        https://bugs.webkit.org/show_bug.cgi?id=116715

        Reviewed by Darin Adler.

        Allow the Calculated type in the Length::percent method that returns the Length's
        float value. This reflects the changes in r110148 that adjusted the Length::isPercent
        method to return true for Length objects of either Percent or Calculated type.

        Test: fast/css/calculated-length-as-percent-crash.html

        * platform/Length.h:
        (WebCore::Length::percent): Assert that Length::isPercent is true when Length::percent
        is called, ensuring the Length's type is either Percent or Calculated.

2013-06-16  Darin Adler  <darin@apple.com>

        Move Clipboard::declareAndWriteDragImage to DragController
        https://bugs.webkit.org/show_bug.cgi?id=117683

        Reviewed by Brent Fulgham.

        * dom/Clipboard.h: Removed declareAndWriteDragImage.

        * page/DragController.cpp:
        (WebCore::selectImageBeforeDragging): Half of the old prepareClipboardForImageDrag
        is now refactored into this function.
        (WebCore::DragController::startDrag): Where we called prepareClipboardForImageDrag,
        instead call selectImageBeforeDragging and declareAndWriteDragImage. This is needed
        because declareAndWriteDragImage needs to be a member function, for Mac at least.

        * page/DragController.h: Added declareAndWriteDragImage.

        * page/efl/DragControllerEfl.cpp:
        (WebCore::DragController::declareAndWriteDragImage): Added empty placeholder.